--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^7.8.2",
+    "@supabase/supabase-js": "^2.87.1",
     "astro": "^4.16.0",
     "solid-js": "^1.9.3"
   },
